syntax = "proto3";

service UserService {
  rpc GetUser(GetUserRequest) returns (UserResponse);
  rpc AddUser(AddUserRequest) returns (UserResponse);
}

message GetUserRequest {
  string userId = 1;
}

message AddUserRequest {
  string name = 1;
  string email = 2;
}

message UserResponse {
  string userId = 1;
  string name = 2;
  string email = 3;
}